[package]
name = "yadv"
description = "Yet another tool to help deal with your Advent of Code data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
reqwest = "0.11.13"
