[package]
name = "yaadv"
description = "Yet another tool to help deal with your Advent of Code data"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
confy = { version = "0.5.1", default-features = false, features = ["ron_conf"] }
serde = { version = "1.0.147", features = ["derive"] }
once_cell = "1.16.0"
dirs = "4.0.0"
ureq = "2.5.0"
inquire = "0.5.2"
colored = "2.0.0"
indicatif = "0.17.2"
ron = "0.8.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
