[package]
name = "yaadv"
version = "0.1.3"
authors = ["nozwock <magenta-duck.ezffr@slmail.me>"]
description = "Yet another Advent of Code CLI tool"
repository = "https://github.com/nozwock/yaadv"
license = "MIT"
keywords = ["advent", "aoc", "cli", "tool"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
confy = { version = "0.5.1", default-features = false, features = ["ron_conf"] }
serde = { version = "1.0.147", features = ["derive"] }
once_cell = "1.16.0"
dirs = "4.0.0"
ureq = "2.5.0"
inquire = "0.5.2"
colored = "2.0.0"
indicatif = "0.17.2"
ron = "0.8.0"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"
